# asvab-platform

./: .env.example  .gitignore  README.md  biome.json  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/ai/: .gitignore  README.md  main.py  pyproject.toml  railway.toml
apps/ai/tests/: test_health.py
apps/web/: middleware.ts  package.json  playwright.config.ts  railway.toml  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/onboarding/: layout.tsx  page.tsx
apps/web/components/auth/: auth-card.tsx
apps/web/components/brand/: logo.tsx  mascot.tsx
apps/web/components/charts/: ring.tsx
apps/web/components/onboarding/: branch-options.ts  step-2-branch.tsx  step-3-target.tsx  step-4-test-date.tsx  step-5-schedule.tsx  step-7-diagnostic.tsx  step-8-plan.tsx  wizard-shell.tsx
apps/web/components/primitives/: icon.tsx  pill.tsx
apps/web/components/shell/: app-shell.tsx  nav-link.tsx  sidebar.tsx  topbar.tsx
apps/web/components/ui/: badge.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  slider.tsx  sonner.tsx
apps/web/e2e/: auth-smoke.spec.ts  health.spec.ts
apps/web/lib/: auth-client.ts  auth.ts  brand.ts  email-templates.ts  email.ts  env.ts  placeholder-data.ts  session.ts
apps/web/lib/data/: _db.ts  _query.ts  profile.ts  session.ts
apps/web/src/: README.md  proxy.ts
apps/worker/: package.json  railway.toml  tsconfig.json
apps/worker/src/: index.ts
(+77 files in other folders)
